fix encoding (now with BOM)

--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-Site web de l'association des parents d'élèves de l'école Jules Verne de Chevaigné
+ï»¿Site web de l'association des parents d'Ã©lÃ¨ves de l'Ã©cole
+Jules Verne de ChevaignÃ©
